objects/Release_Notes__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Attachment__c</fullName>
        <description>Alfresco document.</description>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatorBy__c</fullName>
        <label>Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Media_Type__c</fullName>
        <description>The type of the media. Called mimetype on Repository page.</description>
        <label>Media Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified__c</fullName>
        <description>The time that the last modification occurred.</description>
        <label>Modified Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modifier__c</fullName>
        <description>The last user to make any modifications to this record.</description>
        <label>Modified By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>The unique identifier for the record. The Alfresco system generates this identifier.</description>
        <label>Full Attachment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>The title of the record. This is populated with the name of the file that was uploaded. Change the value to show the title of the record.</description>
        <label>Full Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Release Notes</label>
    <pluralLabel>Release Notes</pluralLabel>
</CustomObject>